--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -6,20 +6,31 @@
         <p id="message_padding">
             <%= e.message %>
             <%# ((Time.current - e.tdate)/60).to_i 分 %>
-            <%= link_to '削除', tweet_path(e), data: { turbo_method: :delete } %>
-            <%= link_to '表示', tweet_path(e) %> <!--/tweets/#{e.id}-->
+            <% if current_user %>
+                <%= link_to '削除', tweet_path(e), data: { "turbo_method": :delete } %>
             
-            <% if session[:login_uid] != nil %>
-                <%= link_to 'いいね', likes_path(tweet_id: e.id), data: { "turbo-method": :post } %>
-                <%= link_to 'いいね削除', like_path(e), data: { turbo_method: :delete } %>
+                <% if e.liked?(current_user) %>
+                    
+                    <%= link_to 'いいね削除', like_path(e), data: { "turbo_method": :delete } %>
+                    
+                <% else %>
+                    
+                    <%= link_to 'いいね', likes_path(tweet_id: e.id), data: { "turbo-method": :post } %>
+                    
+                <% end %>
             <% end %>
 
         </p>
 <% end %>
-<% if session[:login_uid] != nil %>
+<% if current_user %>
     <%= link_to '新規追加', new_tweet_path %>
 <% end %>
 <p> <br> </p>
-<%= link_to 'ログイン', top_main_path %>
-<%= link_to 'ログアウト', top_logout_path %>
+
+<% if current_user %>
+    <%= link_to 'ログアウト', top_logout_path %>
+<% else %>
+    <%= link_to 'ログイン', top_main_path %>
+<% end %>
+
 <%= link_to 'ユーザー一覧', users_path %>
