--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,9 +1,5 @@
-<%= form_with model: @tweet , local: true do |f| %>
+<%= form_for @tweet, url: {action: :create} do |f| %>
     <%= f.label :message, 'メッセージ' %>
     <%= f.text_field :message %>
     <%= f.submit '登録' %>
 <% end %>
-
-<div id="form">
-        <%= render "form" %>
-</div>
