--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,3 +7,6 @@
     <% end %>
     
     <%= link_to '新規追加', new_user_path %>
+    
+    <%= link_to 'ログイン', top_main_path %>
+    <%= link_to 'ログアウト', top_logout_path %>
